add publisher name

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "quick-ssh-on-terminal",
   "description": "",
   "version": "0.0.1",
+  "publisher": "yxhl",
   "author": {
     "name": "yxhl",
     "email": "mingen_li@outlook.com",
